--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,17 +1,16 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@font-face {
+  font-family: 'Proxima';
+  /* Provide a unique name for your font family */
+  src: url('@/ultils/Proxima-Nova-Bold.otf') format('opentype');
+  /* Replace with the path to your OTF font file */
+}
 
 #app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
+  font-family: Poppins, sans-serif;
   color: #2c3e50;
 }
 
 nav {
-  padding: 30px;
 
   a {
     font-weight: bold;
@@ -21,4 +20,55 @@ nav {
       color: #42b983;
     }
   }
+}
+
+.section-title {
+  font-size: 18px;
+  color: rgb(153 153 161);
+  font-weight: 600;
+}
+
+.main-title-name {
+  font-size: 60px;
+  color: rgb(31, 31, 31);
+  font-weight: 900;
+}
+
+.section-paragragh {
+  line-height: 30px;
+  color: rgb(153 153 161);
+  font-size: 18px;
+  max-width: 48rem;
+  width: 100%;
+}
+
+.skill-name {
+  color: rgb(153 153 161);
+  font-size: 18px;
+  font-weight: 700;
+}
+
+//color
+.color-white {
+  color: rgb(229, 231, 235) !important;
+}
+
+// block
+.main-section {
+  width: 100%;
+  max-width: 70rem;
+  margin: 0px auto;
+  padding-top: 60px;
+}
+
+.medium-section {
+  width: 100%;
+  max-width: 60rem;
+  margin: 0px auto;
+  padding-top: 80px;
+}
+
+// animation
+.animate__animated.animate__bounce {
+  --animate-duration: 0.5s forwards;
 }
